cmake_minimum_required(VERSION 3.28)
project(Gabinator_Desktop)
set(OPENCV_DIR "C:/opencv/build")
find_package(OPENCV REQUIRED)

set(SOURCES src/main.cpp)
add_executable(Gabinator_Desktop ${SOURCES})
target_include_directories(Gabinator_Desktop PUBLIC "C:/libusb-1.0.27/include")
target_link_libraries(Gabinator_Desktop ${OpenCV_LIBS} )
target_link_libraries(Gabinator_Desktop "C:/libusb-1.0.27/VS2017/MS64/static/libusb-1.0.lib")